added /audit-trails endpoint
