# src/helpers/types.ts
@@ -350,3 +350,72 @@ export enum pinAuditAction {
     created = 'C',
     recreated = 'R',
 }
+
+/**
+ * The information returned in an audit log request for a given pin, sorted descending
+ * @example [
+  {
+    "logId": "5f926af0-f558-4b29-ace7-f4afdcdabb2d",
+    "expiredAt": "2023-08-25T15:12:59.764Z",
+    "expirationReason": "OR",
+    "sentToEmail": null,
+    "sentToPhone": "19021234567",
+    "pinCreatedAt": "2023-08-24T15:01:49.628Z",
+    "updatedAt": "2023-08-25T15:12:59.764Z",
+    "expiredByName": "Self",
+    "expiredByUsername": "self",
+    "action": "R",
+    "logCreatedAt": "2023-08-25T15:12:59.764Z"
+  },
+  {
+    "logId": "82dc08e5-cbca-40c2-9d35-a4d1407d5f8d",
+    "expiredAt": null,
+    "expirationReason": null,
+    "sentToEmail": null,
+    "sentToPhone": "19021234567",
+    "pinCreatedAt": "2023-08-24T15:01:49.628Z",
+    "updatedAt": "2023-08-24T15:06:27.269Z",
+    "expiredByName": "Self",
+    "expiredByUsername": "self",
+    "action": "C",
+    "logCreatedAt": "2023-08-24T15:06:27.269Z"
+  }
+]
+ */
+export interface auditLogReturn {
+    logs: auditLogInfo[];
+}
+
+/**
+ * The info returned in an audit log
+ * @example
+ * {
+    "logId": "82dc08e5-cbca-40c2-9d35-a4d1407d5f8d",
+    "expiredAt": null,
+    "expirationReason": null,
+    "sentToEmail": null,
+    "sentToPhone": "19021234567",
+    "pinCreatedAt": "2023-08-24T15:01:49.628Z",
+    "updatedAt": "2023-08-24T15:06:27.269Z",
+    "expiredByName": "Self",
+    "expiredByUsername": "self",
+    "action": "C",
+    "logCreatedAt": "2023-08-24T15:06:27.269Z"
+  }
+ */
+export interface auditLogInfo {
+    logId: string;
+    pin: string | null;
+    pid: 0;
+    expiredAt: string | null;
+    expirationReason: expirationReason | null;
+    sentToEmail: string | null;
+    sentToPhone: string | null;
+    pinCreatedAt: string;
+    updatedAt: string | null;
+    expiredByName: string | null;
+    expiredByUsername: string | null;
+    livePinId: string;
+    action: pinAuditAction;
+    logCreatedAt: string;
+}
